tests/negative/pkg_bad_path_part/other.toit
// Copyright (C) 2022 Toitware ApS. All rights reserved.

import pkg

identify:
  return pkg.identify
